--- a/action.yml
+++ b/action.yml
@@ -29,7 +29,7 @@ inputs:
     description: "The file types to translate. The default is all file types supported"
     required: false
     default: 'md,mdx,rst,txt,py,js,json,html,cpp,c,ipynb'
-  file_path_filter:
+  file_paths_filter:
     description: "The file path filter to translate. The default is all files"
     required: false
     default: '.*'
