Implementation of organization

--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,9 @@ inputs:
   api_key:
     description: "The OpenAI api key to use for translation"
     required: true
+  organization:
+    description: "The OpenAI organization"
+    required: false
   source_language:
     description: "The source language to translate from. The default is English"
     required: false
